--- a/server/package.json
+++ b/server/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "start": "nodemon index"
+    "start": "nodemon index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/express-session": "^1.17.4",
+    "@types/mongoose": "^5.11.97",
+    "@types/passport": "^1.0.7",
+    "@types/passport-local": "^1.0.34",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "connect-flash": "^0.1.1",
@@ -25,5 +29,11 @@
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "ts-node": "^10.4.0"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13"
   }
 }
